--- a/app/src/main/res/drawable/ic_circle_white_vector.xml
+++ b/app/src/main/res/drawable/ic_circle_white_vector.xml
@@ -3,5 +3,5 @@
     android:width="16dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    <path android:fillColor="#FF1500" android:pathData="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" />
+    <path android:fillColor="#000000" android:pathData="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" />
 </vector>
