--- a/app/src/main/res/layout/activity_cut.xml
+++ b/app/src/main/res/layout/activity_cut.xml
@@ -11,48 +11,55 @@
         android:id="@+id/filter_range_bar"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:clickable="true"
-
-        android:layout_marginTop="27dp"
         android:layout_below="@+id/ratioframe"
-        android:layout_centerHorizontal="true" />
+
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="27dp"
+        android:clickable="true" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cut"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:text="Cut" />
+
     <com.example.tm.videocut.AlternativeAspectRatioFrameLayout
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
         android:id="@+id/ratioframe"
-        app:aspectRatioWidth="16"
-        app:aspectRatioHeight="9"
-        android:layout_marginTop="30dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-
-
-    <SurfaceView
-        android:id="@+id/videoView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_above="@+id/filter_range_bar"
-        />
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="30dp"
+        app:aspectRatioHeight="9"
+        app:aspectRatioWidth="16">
 
-            <ImageView
-                android:id="@+id/play_button"
-                android:layout_width="81dp"
-                android:layout_height="72dp"
-                android:layout_gravity="center_vertical|center_horizontal"
-                android:clickable="true"
-                android:src="@drawable/playimg" />
+
+        <SurfaceView
+            android:id="@+id/videoView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/filter_range_bar"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true" />
+
+        <ProgressBar
+            android:id="@+id/progressBar2"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal" />
+
+        <ImageView
+            android:id="@+id/play_button"
+            android:layout_width="81dp"
+            android:layout_height="72dp"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:clickable="true"
+            android:src="@drawable/playimg" />
 
 
     </com.example.tm.videocut.AlternativeAspectRatioFrameLayout>
