--- a/app/src/main/res/layout/choose_adapetr.xml
+++ b/app/src/main/res/layout/choose_adapetr.xml
@@ -27,7 +27,7 @@
                     android:layout_weight="50"
                     android:orientation="vertical">
 
-                    <VideoView
+                    <ImageView
                         android:id="@+id/videoViewList"
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
@@ -68,7 +68,7 @@
                     android:layout_weight="50"
                     android:orientation="vertical">
 
-                    <VideoView
+                    <ImageView
                         android:id="@+id/videoViewList2"
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
