--- a/app/src/main/res/layout/activity_cut.xml
+++ b/app/src/main/res/layout/activity_cut.xml
@@ -11,11 +11,10 @@
         android:id="@+id/filter_range_bar"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/ratioframe"
-
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="27dp"
-        android:clickable="true" />
+        android:clickable="true"
+        android:layout_below="@+id/ratioframe"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:id="@+id/button"
